[package]
name = "fmin"
description = "A terminal file manager, inspired by fman"
version = "0.3.0"
edition = "2021"
authors = ["Justin Wong <justin@wonger.dev>"]
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23.2"
chrono = "0.4.19"
byte-unit = "4.0.14"
log = "0.4.20"
