[package]
name = "fmin"
description = "A low-friction terminal file manager, inspired by fman"
version = "0.6.0"
edition = "2021"
authors = ["Justin Wong <justin@wonger.dev>"]
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "= 0.23.2"
chrono = "= 0.4.19"
log = "= 0.4.20"
binary-heap-plus = "= 0.5.0"

[dev-dependencies]
criterion = "= 0.3.4"

[[bench]]
name = "performance_benchmarks"
harness = false
